# zombie_sycl

./: CMakeLists.txt
build_icpx/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  batch_test  cmake_install.cmake  experiment_runner  hello_sycl  param_sweep  test_longtail  walkstate_bridge_sycl  walkstate_lite_sycl  walktask_lite_sycl  walktask_phased_sycl  wos_3d_mesh_test  wos_3d_test  wos_analytic_test  wos_mesh_test  wos_multipoint_test  wos_sycl_baseline  wos_sycl_dg  wos_sycl_mp  zombie_sycl_smoke
build_icpx/demo/: Makefile  cmake_install.cmake  demo
build_icpx/intelllvm_2025.2_cxx11_64_release/: libtbb.so.12.18  libtbbmalloc.so.2.18  libtbbmalloc_proxy.so.2.18
demo/model_problems/engine/: wost_512.json
demo/model_problems/engine/solutions/: bvc.pfm  bvc_color.pfm  rws.pfm  rws_color.pfm  wost.pfm  wost_color.pfm
sycl/: DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_PHASE2.md  batch_solver.h  batch_test.cpp  experiment_config.h  experiment_results.csv  experiment_runner.cpp  geometry_host.h  greens_function_device.h  hello_sycl  hello_sycl.cpp  mesh_loader.h  metrics.h  param_sweep.cpp  pcg32_device.h  phase_policy.h  precision_ops.h  statistics.h  task_init.h  task_queue.h  task_runtime.h  test_longtail.cpp  walkstate_bridge.h  walkstate_bridge_sycl.cpp  walkstate_lite_sycl.cpp  walktask_lite_sycl.cpp  walktask_phased_sycl.cpp  wos_3d_mesh_test.cpp  wos_3d_test.cpp  wos_analytic_test.cpp  wos_mesh_test.cpp  wos_multipoint_test.cpp  wos_sycl_baseline.cpp  wos_sycl_dg.cpp  wos_sycl_mp.cpp  zombie_sycl_smoke.cpp
sycl/thesis_chapters/: 00_封面信息.md  01_绪论.md  02_Zombie框架与随机游走算法分析.md  03_面向SW26010P的并行执行模型与架构映射.md  04_自适应并行粒度的动态负载均衡.md  05_阶段感知混合精度策略.md  06_Zombie迁移与原型系统实现.md  07_实验.md  08_结论与展望.md  09_致谢.md  10_参考文献.md
